--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CodeChallenge</string>
+    <string name="placeholder_movie_title">Placeholder Movie Title</string>
 </resources>
