--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CodeChallenge</string>
     <string name="placeholder_movie_title">Placeholder Movie Title</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search for movies in TMDB</string>
 </resources>
