--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CodeChallenge</string>
+    <string name="app_name">TMDB</string>
     <string name="placeholder_movie_title">Placeholder Movie Title</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search for movies in TMDB</string>
